[gd_scene load_steps=11 format=3 uid="uid://80j1tuaoem6c"]

[ext_resource type="Script" uid="uid://fujsi3nnbksy" path="res://Scripts/card.gd" id="1_bnspj"]
[ext_resource type="Texture2D" uid="uid://5jr3j23un7ca" path="res://Assets/CardTextures/BorderCardBg.png" id="2_xnv4g"]
[ext_resource type="Texture2D" uid="uid://dsyuaq12n0hel" path="res://Assets/CardTextures/Fire ball.png" id="3_u5wvb"]
[ext_resource type="FontFile" uid="uid://b2bfdtrxj4vgf" path="res://Assets/Fonts/Amika Blackletter Free Font.ttf" id="4_mm04k"]
[ext_resource type="FontFile" uid="uid://b3l3ca8hd6g3f" path="res://Assets/Fonts/Birds of Paradise â•• PERSONAL USE ONLY.ttf" id="5_yvxpl"]
[ext_resource type="Texture2D" uid="uid://dtr1axxdn8v37" path="res://Assets/CardTextures/Magical Mayhem spell deck back.png" id="6_uf1hq"]

[sub_resource type="Animation" id="Animation_1i5pp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeckSprite:z_index")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Container:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DeckSprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Container:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("DeckSprite:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_pjytt"]
resource_name = "card_flip"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeckSprite:z_index")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.10000001, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, -1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.10000001, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [-1, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Container:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.10000001, 0.20000002, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 1), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DeckSprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.10000001, 0.20000002, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 1), Vector2(0.100000024, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Container:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.10000001, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("DeckSprite:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.20000002, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_b4rk6"]
resource_name = "discard"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.05, 0.05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 12.566371]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b4rk6"]
_data = {
&"RESET": SubResource("Animation_1i5pp"),
&"card_flip": SubResource("Animation_pjytt"),
&"discard": SubResource("Animation_b4rk6")
}

[node name="Card" type="Control"]
custom_minimum_size = Vector2(152, 208)
layout_mode = 3
anchors_preset = 0
offset_right = 152.0
offset_bottom = 208.0
pivot_offset = Vector2(76, 104)
script = ExtResource("1_bnspj")
hover_lift = 80.0

[node name="Container" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = -1
anchors_preset = 0
offset_right = 152.0
offset_bottom = 208.0
pivot_offset = Vector2(76, 104)

[node name="BGSprite" type="TextureRect" parent="Container"]
layout_mode = 0
offset_right = 152.0
offset_bottom = 208.0
texture = ExtResource("2_xnv4g")
expand_mode = 1

[node name="CardSprite" type="Sprite2D" parent="Container"]
position = Vector2(76, 89)
scale = Vector2(0.04, 0.04)
texture = ExtResource("3_u5wvb")

[node name="Title" type="Label" parent="Container"]
layout_mode = 0
offset_left = 5.0
offset_top = 7.9999924
offset_right = 147.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_mm04k")
theme_override_font_sizes/font_size = 20
text = "Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="RichTextLabel" parent="Container"]
clip_contents = false
layout_mode = 0
offset_left = 9.0
offset_top = 136.0
offset_right = 143.0
offset_bottom = 200.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("5_yvxpl")
bbcode_enabled = true
text = "Deal"

[node name="HBoxContainer" type="HBoxContainer" parent="Container"]
layout_mode = 0
offset_left = 8.0
offset_top = 32.0
offset_right = 144.0
offset_bottom = 48.0
theme_override_constants/separation = 8

[node name="LeftCost" type="VBoxContainer" parent="Container/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="FireCost" type="HBoxContainer" parent="Container/HBoxContainer/LeftCost"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
theme_override_constants/separation = 2

[node name="WaterCost" type="HBoxContainer" parent="Container/HBoxContainer/LeftCost"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
theme_override_constants/separation = 2

[node name="RightCost" type="VBoxContainer" parent="Container/HBoxContainer"]
layout_mode = 2

[node name="WindCost" type="HBoxContainer" parent="Container/HBoxContainer/RightCost"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
theme_override_constants/separation = 2

[node name="EarthCost" type="HBoxContainer" parent="Container/HBoxContainer/RightCost"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
theme_override_constants/separation = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_b4rk6")
}

[node name="DeckSprite" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -104.0
offset_right = 76.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(76, 104)
texture = ExtResource("6_uf1hq")
expand_mode = 1

[node name="SelectTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
ignore_time_scale = true

[connection signal="timeout" from="SelectTimer" to="." method="_on_select_timer_timeout"]
